# opengl-project

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  binding_vbo.cpp  main.cpp  shader_encapsulated.cpp  test.cpp
graphics/: CMakeLists.txt
graphics/include/: line.h
graphics/src/: line.cpp
test_encapsulated/: CMakeLists.txt
test_files/: triangles2.csv  triangles4.csv  triangles8.csv
